Add JDK17 startup scripts patch by Ekaterina Dimitrova; reviewed by Mick Semb Wever for CASSANDRA-18258